k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mysteryalgorist/yolo-client:1.1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /srv/app/yolo
          resources:
            limits:
              cpu: "1"  # Adjust CPU limit as needed
              memory: "1024Mi"  # Adjust memory limit as needed
      volumes:  # Define the shared storage volume
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
