k8s/yolo-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
 name: yolo-app
 labels:
   app: yolo
spec:
 containers:
 - image: mysteryalgorist/yolo-backend:1.1.0
   name: backend
   ports:
   - containerPort: 5000
     protocol: TCP
   imagePullPolicy: Always
   resources:
     limits:
       cpu: "1"
       memory: 1Gi
     requests:
       cpu: 1000m
       memory: 1000Mi
 - image: mysteryalgorist/yolo-client:1.2.0
   name: client
   ports:
   - containerPort: 3000
     protocol: TCP
   imagePullPolicy: Always
   stdin: true
   tty: true
   resources:
     limits:
       cpu: "1"
       memory: 1Gi
     requests:
       cpu: 1000m
       memory: 512Mi
