k8s/yolo-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-external-service
spec:
  selector:
    app: ecommerce
  ports:
  - protocol: TCP
    name: http
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: http1
    port: 5000
    targetPort: 5000
  type: LoadBalancer
