k8s/yolo-ingress.yaml
apiVersion: v1
kind: Service
metadata:
 name: database-service
spec:
 ports:
 - port: 80
   targetPort: 27017
 selector:
   app: mongodbclear
