k8s/yolo-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-external-service
spec:
  selector:
    app: yolo
  ports:
  - protocol: TCP
    name: http-client
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: http-backend
    port: 5000
    targetPort: 5000
  type: LoadBalancer
